--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 # Tokens
-DISCORD_TOKEN=OTI3ODY5NzQ1MTQxODA1MTA2.GiYo0L.k31qTVdNQwzwBLhNvnfsUZZE4q8u6C7znHMFuw
+DISCORD_TOKEN=OTI3ODY5NzQ1MTQxODA1MTA2.GZX8sG.38xgxyF4jE1Xd0Ka9gRsBXdvzaF1nTYtU-c3JM
 OWNERS=787977601976631336
